--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,3 @@
-h1 {
-   color: #d22e3a
-}
-
-
 form.login_form {
     margin-left: auto;
     margin-right: auto;
@@ -11,4 +6,13 @@ form.login_form {
     border: 1px solid gray;
     border-radius: 5px;
     padding: 10px;
+}
+h4 {
+    color: rgb(109, 102, 102);
+}
+h2 {
+    text-align: center;
+}
+.image {
+    text-align: center;
 }
