--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,6 @@ form.login_form {
     color: rgb(109, 102, 102);
     text-align: left;
 }
-.pact {
-    font-size: 20px;
-    margin-left: 5px;
+h2 {
+    text-align: center;
 }
