--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,9 +13,16 @@ h4 {
 h1 {
     text-align: center;
 }
-.answer {
-    margin-left: 20px;
+.ofrml {
+    text-align: center;
+    color: black;
 }
-.auto_answer {
-    margin-left: 20px;
+.male {
+    width: 551px;
+    height: auto;
+    margin-left: 100px;
+}
+.years {
+    width: 520px;
+    height: auto;
 }
